--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,19 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-white: #ffffff;
+  --color-black: #171717;
+  --color-text: #374151;
+  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
+
+  --color-pink-darker: #450920; 
+  --color-primary: #a53860;
+  --color-pink: #da627d;
+  --color-pink-light: #ffa5ab;
+  --color-pink-lighter: #f7ede2;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  direction: rtl;
+  font-family: 'Vazirmatn', sans-serif;
 }
 
 * {
